# api_image_recognition_ocr_engine_fastapi

./: .dockerignore  .env.example  .gitignore  DOCKERFILE_SECURITY.md  DOCKER_USAGE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  script_install.md
.venv_cached/: pyvenv.cfg
app/: __init__.py  app.py  main.py
app/clients/: __init__.py  ocr.py
app/internal/: __init__.py  config.py  logs.py  models.py
app/orchestrator/: __init__.py  manager.py
app/routers/: ocr.py
