[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-recognition-ocr-engine"
version = "1.0.0"
description = "FastAPI-based OCR engine using PaddleOCR"
authors = [{name = "OCR Team"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn==0.42.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "numpy<2",
    "paddlepaddle>=2.6.0",
    "paddleocr==2.10.0",
    "beautifulsoup4>=4.12.0,<5",
    "python-multipart==0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["outputs*"]
